<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: Group25_InClass10
File Name: Group25_InClass10 - fragment_add_course.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseFragment" >

    <EditText
        android:id="@+id/add_courseNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/course_number_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/course_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_courseNumber" />

    <EditText
        android:id="@+id/add_creditHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/credit_hours_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_courseName" />

    <TextView
        android:id="@+id/add_gradeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="14dp"
        android:text="@string/course_grade_radio_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_creditHours" />

    <RadioGroup
        android:id="@+id/add_gradeRadioGroup"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/add_gradeLabel"
        app:layout_constraintTop_toBottomOf="@+id/add_creditHours">

        <RadioButton
            android:id="@+id/add_gradeRadioA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/course_grade_radio_A" />

        <RadioButton
            android:id="@+id/add_gradeRadioB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/course_grade_radio_B" />

        <RadioButton
            android:id="@+id/add_gradeRadioC"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/course_grade_radio_C" />

        <RadioButton
            android:id="@+id/add_gradeRadioD"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/course_grade_radio_D" />

        <RadioButton
            android:id="@+id/add_gradeRadioF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/course_grade_radio_F" />
    </RadioGroup>

    <Button
        android:id="@+id/add_submitButton"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_gradeRadioGroup" />

    <Button
        android:id="@+id/add_cancelButton"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel_button_label"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_submitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>